--- a/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
+++ b/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
@@ -44,6 +44,7 @@
     <Compile Include="LiczbyNaSlowa.cs" />
     <Compile Include="LiczbyNaSlowaBuldier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slowniki.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
