--- a/LiczbyNaSlowaNET_Testy/LiczbyNaSlowaNET_Testy.csproj
+++ b/LiczbyNaSlowaNET_Testy/LiczbyNaSlowaNET_Testy.csproj
@@ -51,11 +51,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="TestySetek.cs" />
-    <Compile Include="TestyMilionow.cs" />
-    <Compile Include="TestyMiliardow.cs" />
-    <Compile Include="TestyDziesiatek.cs" />
-    <Compile Include="TestyJednosci.cs" />
+    <Compile Include="Hundreds.cs" />
+    <Compile Include="Millions.cs" />
+    <Compile Include="Billions.cs" />
+    <Compile Include="Tens.cs" />
+    <Compile Include="Unity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
