Przygotowanie do obsługi walut.

--- a/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
+++ b/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonConverter.cs" />
+    <Compile Include="CurrencyConvertAlgorithm.cs" />
     <Compile Include="NumberToTextConverter.cs" />
     <Compile Include="ConvertAlgorithm.cs" />
     <Compile Include="ConverterBuldier.cs" />
