--- a/LiczbyNaSlowaNET_Testy/LiczbyNaSlowaNET_Testy.csproj
+++ b/LiczbyNaSlowaNET_Testy/LiczbyNaSlowaNET_Testy.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CurrencyDecimal.cs" />
     <Compile Include="Decimal.cs" />
     <Compile Include="Thousands.cs" />
     <Compile Include="Hundreds.cs" />
