Dodanie klasy opcji. Jeszcze nie aktywna.

--- a/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
+++ b/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
@@ -48,6 +48,7 @@
     <Compile Include="NumberToText.cs" />
     <Compile Include="CommonAlgorithm.cs" />
     <Compile Include="IAlgorithm.cs" />
+    <Compile Include="NumberToTextOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dictionaries.cs" />
   </ItemGroup>
