--- a/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
+++ b/LiczbyNaSlowaNET/LiczbyNaSlowaNET.csproj
@@ -44,15 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithm.cs" />
-    <Compile Include="CurrencyAlgorithm.cs" />
-    <Compile Include="IDictionaries.cs" />
+    <Compile Include="Algorithms\CurrencyAlgorithm.cs" />
+    <Compile Include="Dictionaries\IDictionaries.cs" />
     <Compile Include="NumberToText.cs" />
-    <Compile Include="CommonAlgorithm.cs" />
-    <Compile Include="IAlgorithm.cs" />
+    <Compile Include="Algorithms\CommonAlgorithm.cs" />
+    <Compile Include="Algorithms\IAlgorithm.cs" />
     <Compile Include="NumberToTextOptions.cs" />
-    <Compile Include="PolishWithsStemsDictionary.cs" />
+    <Compile Include="Dictionaries\PolishWithsStemsDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Dictionaries.cs" />
+    <Compile Include="Dictionaries\Dictionaries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
