Dodanie nowych testów.

--- a/LiczbyNaSlowaNET_Testy/LiczbyNaSlowaNET_Testy.csproj
+++ b/LiczbyNaSlowaNET_Testy/LiczbyNaSlowaNET_Testy.csproj
@@ -53,6 +53,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="PolishStemsDictionary\Billions.cs" />
+    <Compile Include="PolishStemsDictionary\CurrencyDecimal.cs" />
+    <Compile Include="PolishStemsDictionary\Decimal.cs" />
+    <Compile Include="PolishStemsDictionary\Hundreds.cs" />
+    <Compile Include="PolishStemsDictionary\Millions.cs" />
+    <Compile Include="PolishStemsDictionary\Tens.cs" />
+    <Compile Include="PolishStemsDictionary\Thousands.cs" />
+    <Compile Include="PolishStemsDictionary\ThreadSafety.cs" />
+    <Compile Include="PolishStemsDictionary\Unity.cs" />
     <Compile Include="SplitDecimal.cs" />
     <Compile Include="PolishDictionary\CurrencyDecimal.cs" />
     <Compile Include="PolishDictionary\Decimal.cs" />
@@ -72,9 +81,7 @@
       <Name>LiczbyNaSlowaNET</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PolishStemsDictionary\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
