--- a/LiczbyNaSlowaNET_Testy/packages.config
+++ b/LiczbyNaSlowaNET_Testy/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Ninject" version="3.2.3-unstable-012" targetFramework="net40" />
-  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net40" />
+  <package id="Ninject" version="3.2.3-unstable-012" targetFramework="net40" requireReinstallation="true" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="xunit" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net46" />
 </packages>
